--- a/src/styles/Features.css
+++ b/src/styles/Features.css
@@ -1,6 +1,7 @@
 .features {
     background-color: #f7f6ef;
     padding: 3rem 2rem;
+    width:100%
 }
 
 .features h2 {
@@ -11,7 +12,8 @@
 }
 
 .feature-list {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
 }
@@ -19,11 +21,22 @@
 .feature-item {
     display: flex;
     align-items: flex-start;
-    gap: 1rem;
+    gap: 10px;
     padding: 1.5rem;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    height: 198px;
+    width:60%;
+    grid-template-columns: 1fr 1fr;
+}
+
+.feature-item:nth-child(odd) {
+    grid-column: 1;
+}
+
+.feature-item:nth-child(even) {
+    grid-column: 2;
 }
 
 .feature-item span {
