--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
+    width:100%;
     background-color: #333;
     color: #fff;
-    padding: 2rem 2rem;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
