--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -1,8 +1,12 @@
 .about-us {
+    font-family: 'Poppins', sans-serif;
+    width: 100%;
+    height: 650px;
     margin-top: 140px;
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 2rem;
-    padding: 3rem 2rem;
     background-color: #DDE2D6;
 }
 
@@ -16,11 +20,14 @@
 }
 
 .about-us-text h2 {
-    font-size: 2rem;
-    color: #333;
+    font-size: 48px;
+    line-height: 72px;
+    color: #6B6B37;
 }
 
 .about-us-text p {
     margin: 1rem 0;
-    color: #555;
+    font-size: 28px;
+    line-height: 42px;
+    color: #000000;
 }
