--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,13 @@
 .footer {
+    height: 401px;
     width:100%;
-    background-color: #333;
+    background-color: #202013;
     color: #fff;
+    font-family: 'Poppins', sans-serif;
+}
+
+.footer-content {
+    padding: 40px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -9,15 +15,40 @@
 
 .footer-section {
     margin-bottom: 1rem;
+
+    h5{
+        color: #6B6B37;
+        font-size: 28px;
+        line-height: 36px;
+        font-weight: 700;
+    }
+}
+
+.footer-section-content {
+    display: flex;
+    gap: 10px;
+    margin: 0;
+
+    p{
+        font-size: 24px;
+        line-height: 36px;
+        font-weight: 500;
+    }
 }
 
 .footer h4 {
-    font-size: 1.2rem;
-    margin-bottom: 1rem;
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 600;
+    color: #FFFFFF;
 }
 
 .footer ul {
     list-style: none;
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 500;
+    color: #BBBBBB;
     padding: 0;
 }
 
