--- a/src/styles/Features.css
+++ b/src/styles/Features.css
@@ -35,7 +35,7 @@
 
 .feature-item {
     height: 152px;
-    width: 1133px;
+    width: 61%;
     display: flex;
     align-items: center;
     gap: 48px;
@@ -83,6 +83,7 @@
      padding-left: 0;
      flex-direction: row-reverse;
      border-radius: 0 84px 84px 0;
+     align-self: flex-start;
 }
 
 .even {
