--- a/src/styles/Title.css
+++ b/src/styles/Title.css
@@ -1,6 +1,8 @@
 .title{
+    margin-top: 36px;
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-family: 'Poppins', sans-serif;
@@ -9,17 +11,24 @@
 .title-container{
     border-radius: 8px;
     height: 300px;
-    width: 99%;
+    width: 95%;
     display: flex;
     align-items: center;
     justify-content: center;
     background-image: url('../../public/images/title_background.png');
     background-repeat: no-repeat;
-    background-position: 0 -75px;
+    background-position: 0 -400px;
     background-size: 100%;
     filter: blur(8px);
     -webkit-filter: blur(8px);
     z-index: -1;
+}
+
+.title-text{
+    position: absolute;
+    left: 50%;
+    top: 250px;
+    transform: translate(-50%, 0);
 
     h1{
         font-size: 64px;
@@ -29,4 +38,53 @@
         color: #FFFFFF;
         z-index: 1;
     }
+}
+
+.product-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 126px;
+    gap: 126px;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.product-card {
+    width: 1254px;
+    display: flex;
+    align-items: center;
+    border-radius: 24px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.product-image {
+    flex: 1;
+    padding: 20px;
+}
+
+.product-image img {
+    max-width: 50%;
+    border-radius: 50%;
+}
+
+.product-content {
+    flex: 6;
+    padding: 20px;
+}
+
+.product-title {
+    color: #6B6B37;
+    font-size: 32px;
+    line-height: 48px;
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+
+.product-description {
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 15px;
+    font-weight: 400;
 }
